@@ -1,3 +1,9 @@
+2013-04-24  Hui Zhu  <hui@codesourcery.com>
+
+	PR gdb/15165
+
+	* gdb.base/save-bp.exp: Add test for dprintf.
+
 2013-04-19  Vladimir Kargov  <kargov@gmail.com>
 	    Pedro Alves  <palves@redhat.com>
 
